Genericize title/navbar

--- a/assassins.html
+++ b/assassins.html
@@ -1,5 +1,5 @@
 <head>
-  <title>ΛΧΑ Assassins</title>
+  <title>Assassins</title>
 </head>
 
 <body>
@@ -17,7 +17,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">ΛΧΑ Assassins</a>
+        <a class="navbar-brand" href="#">Assassins</a>
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
     </div><!-- /.container-fluid -->
