--- a/assassins.html
+++ b/assassins.html
@@ -17,7 +17,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Assassins</a>
+        <a class="navbar-brand" href="#">{{{prefix}}}Assassins</a>
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
     </div><!-- /.container-fluid -->
