--- a/assassins.html
+++ b/assassins.html
@@ -25,6 +25,7 @@
   <div class="container">
     <div class="row">
       {{#if isAdmin}}
+      {{print_kills}}
         {{> adminContent}}
       {{else}}
         {{> userContent}}
